fix: Break large post titles on small devices

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -82,6 +82,8 @@ textarea {
 		@media (prefers-color-scheme: dark) {
 			color: #FFF;
 		}
+		overflow-wrap: break-word;
+		word-wrap: break-word;
 	}
 
 	h1 {
